# triangles

./: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
